--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
       <h1>逃した魚</h1>
       <p class="type">Album</p>
     <div class="description">
-      <img src="img/karu.jpg" width="100px"; height="100px" alt="カルロス・ゴーン">
-      <p>Back number first Album</p>
+      <a href="#"><img src="img/karu.jpg" width="100px"; height="100px" alt="カルロス・ゴーン">
+      </a>
+        <p>Back number first Album</p>
       <p>サイゼは治安が悪い<br>
     だから私は"mister donut"</p>
     </div>
